# AdaptivePerf

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  adaptiveperf  adaptiveperf-flamegraph  adaptiveperf-merge  adaptiveperf-perf-get-callchain.py  adaptiveperf-split-ids  adaptiveperf-split-report  apptainer.def  build.sh  build_server.sh  clean.sh  install.sh  setup.sh  stackcollapse-perf.pl  test.sh
OpenSYCL/: Dockerfile  clang_libs.cmake  get_addr  get_name  match_addr  offcputime  profile  replace_addr  split_ids  stackcollapse-perf.pl
SYCL-ROOT/: Dockerfile
SYCL-cling/: Dockerfile
ci/: vm_deploy.sh  vm_setup.sh  vm_test.sh
docs/: Doxyfile  MAINPAGE.md  diagrams.css
src/: adaptiveperf-merge  adaptiveperf-misc-funcs.sh  adaptiveperf-perf-get-callchain.py  adaptiveperf-split-ids  adaptiveperf-split-report  adaptiveperf-stackcollapse  archive.cpp  archive.hpp  bashly.yml  bashly_template.yml  common.hpp  entrypoint.cpp  entrypoint.hpp  main.cpp  print.cpp  print.hpp  process.cpp  process.hpp  profilers.cpp  profilers.hpp  profiling.cpp  profiling.hpp  requirements.cpp  requirements.hpp  root_command.sh  version.cpp.in
src/cmd/: cmd.hpp
src/helpers/: tracer_wait.c
src/scripts/: Makefile  adaptiveperf-process-record  adaptiveperf-process-report  adaptiveperf-process-worker.py  adaptiveperf-process.py  adaptiveperf-syscall-process-record  adaptiveperf-syscall-process-report  adaptiveperf-syscall-process.py  install.sh
src/server/: CMakeLists.txt  client.cpp  entrypoint.cpp  entrypoint.hpp  main.cpp  server.cpp  server.hpp  socket.cpp  socket.hpp  subclient.cpp  version.cpp.in  version.hpp
src/utils/: adaptiveperf-code.py  install.sh
test/: adaptiveperf-merge.bats  adaptiveperf-misc-funcs.bats  adaptiveperf-perf-get-callchain.bats  adaptiveperf-split-ids.bats  adaptiveperf-split-report.bats  adaptiveperf-stackcollapse.bats  adaptiveperf.bats  assert_funcs.bash
test/adaptiveperf/: multi_threaded.cpp  single_threaded.cpp
test/adaptiveperf-merge/: no_overall_offcpu1.data  no_overall_offcpu2.data  test1_result_expected.data  test2_overall_offcpu_collapsed_expected.data  test2_result_expected.data  test3_result_expected.data  test4_overall_offcpu_collapsed_expected.data  with_overall_offcpu1.data  with_overall_offcpu2.data  with_overall_offcpu3.data
test/adaptiveperf-perf-get-callchain/: syscalls.data  test1_result_expected.data
test/adaptiveperf-split-ids/: cpu_multiple.data  overall_offcpu_multiple.data  test2_5_5_with_overall_offcpu_expected.data  test3_5_5_no_overall_offcpu_expected.data  test3_5_5_with_overall_offcpu_expected.data  test4_5_5_no_overall_offcpu_expected.data  test4_5_5_with_overall_offcpu_expected.data  test5_1_1_sampled_time_expected.data  test5_1_5810_no_overall_offcpu_expected.data  test5_1_5810_sampled_time_expected.data  test5_458571_1290_with_overall_offcpu_expected.data  test6_1_5810_no_overall_offcpu_expected.data  test6_1_5810_sampled_time_expected.data  test6_1_5810_with_overall_offcpu_expected.data  test6_458571_1290_no_overall_offcpu_expected.data  test6_458571_1290_sampled_time_expected.data  test6_458571_1290_with_overall_offcpu_expected.data  test7_1_1_with_overall_offcpu_expected.data  test7_1_5810_no_overall_offcpu_expected.data  test7_1_5810_sampled_time_expected.data  test7_1_5810_with_overall_offcpu_expected.data  test7_458571_1290_no_overall_offcpu_expected.data  test7_458571_1290_sampled_time_expected.data  test7_458571_1290_with_overall_offcpu_expected.data
test/adaptiveperf-split-report/: too_small_perf_script.data
test/adaptiveperf-stackcollapse/: off_cpu.data  off_cpu_result_expected.data  off_cpu_single.data  off_cpu_single_result_expected.data  on_cpu.data  on_cpu_result_expected.data  on_cpu_single.data  on_cpu_single_result_expected.data  overall_offcpu.data  overall_offcpu_result_expected.data  overall_offcpu_single.data  overall_offcpu_single_result_expected.data
test/adaptiveperf/mock_test10/: sysctl
test/adaptiveperf/mock_test11/: sysctl
test/adaptiveperf/mock_test12/: sysctl
test/adaptiveperf/mock_test13/: sysctl
test/server/: consts.hpp  mocks.hpp  test_client.cpp  test_server.cpp  test_socket.cpp  test_subclient.cpp
